# CatAndMouse

./: CMakeLists.txt
src/: main.c
src/common/: ArrayUtils.c  ArrayUtils.h  CommonEnums.h  CommonStructs.c  CommonStructs.h  Constants.h  ListUtils.c  MiniMax.c
src/controllers/: GameController.c  GameController.h  LoadGameController.c  LoadGameController.h  MainMenuController.c  MainMenuController.h  NewGameController.c  NewGameController.h  WorldCreatorController.c  WorldCreatorController.h
src/menu/main_menu/: MainMenu.c  MainMenu.h
src/models/: GameModel.c  GameModel.h  WorldModel.c  WorldModel.h
src/services/game/: BoardEvaluationService.c  BoardEvaluationService.h  GameService.c  GameService.h
src/services/world_builder/: WorldReaderService.c  WorldReaderService.h  WorldsService.c  WorldsService.h
worlds/: world_0.txt
